Fixed basic style to be readable on dark mode

--- a/rsc/styles/style.css
+++ b/rsc/styles/style.css
@@ -10,3 +10,7 @@ body{
 h1 {
     color: var(--accent-500);
 }
+
+h2, h3 , li{
+    color: var(--text-700);
+}
